--- a/_posts/2024-05-20-TEST.md
+++ b/_posts/2024-05-20-TEST.md
@@ -2,3 +2,20 @@
 layout: default
 title:  "Welcome to Jekyll!"
 ---
+
+
+# Unified Diagnositc Severice (UDS)
+- In automotive industry, to analyze the vehicle when it on operation or when your car has problem
+and you get it to gagrage.
+Therefore, the standadized protocol is created as UDS in ISO 14229-1
+
+## UDS with OSI layer
+- According to 
+- In this post, we focus on UDS with CAN only
+
+## UDS Frame format
++ Sevice ID (SID): ID of service, range from 0x00..0x3E
++ Sub-function: some SID suport sub-function that is a specific request action
++ Request Data Parameters: can be DID, DTC. 
+    DID usually is static data store in advance in ECU memory, e.g: VECU Purchase Part Number.
+    DTC is stand for Diagnoistic Trouble Code, it store information about error happen in ECU
