--- a/_posts/2024-05-20-TEST.md
+++ b/_posts/2024-05-20-TEST.md
@@ -2,20 +2,27 @@
 layout: default
 title:  "Welcome to Jekyll!"
 ---
-
-
 # Unified Diagnositc Severice (UDS)
 - In automotive industry, to analyze the vehicle when it on operation or when your car has problem
 and you get it to gagrage.
-Therefore, the standadized protocol is created as UDS in ISO 14229-1
+Therefore, the standadized protocol is created as UDS and defined in ISO 14229-1
 
 ## UDS with OSI layer
 - According to 
 - In this post, we focus on UDS with CAN only
 
-## UDS Frame format
-+ Sevice ID (SID): ID of service, range from 0x00..0x3E
-+ Sub-function: some SID suport sub-function that is a specific request action
-+ Request Data Parameters: can be DID, DTC. 
-    DID usually is static data store in advance in ECU memory, e.g: VECU Purchase Part Number.
-    DTC is stand for Diagnoistic Trouble Code, it store information about error happen in ECU
+## UDS Request Frame format
+### Sevice ID (SID)
+ID of service, range from 0x00..0x3E
+### Sub-function:
+Some SID suport sub-function that is a specific request action
+### Request Data Parameters: 
+can be DID, DTC. 
+*DID usually is static data store in advance in ECU memory, it is read by SID=0x22(readDataByIdentifier) e.g: VECU Purchase Part Number. The definition list of DID can be found in Annex C-ISO14229-1. OEM can define their own DID support list base on standard.
+*DTC is stand for Diagnoistic Trouble Code, it store information about error happen in ECU, e.g:
+
+
+## UDS Response Frame format
+### Negative/Positive Response Service ID
+*In case sever/ECU is repsone normally, Response SID = (Request SID + 0x40)
+*In case error happen, e.g SID is not support, Response SID = 0x7F
