--- a/_posts/2024-05-20-TEST.md
+++ b/_posts/2024-05-20-TEST.md
@@ -14,15 +14,18 @@ Therefore, the standadized protocol is created as UDS and defined in ISO 14229-1
 ## UDS Request Frame format
 ### Sevice ID (SID)
 ID of service, range from 0x00..0x3E
-### Sub-function:
-Some SID suport sub-function that is a specific request action
+### Sub-function byte:
+Some SID suport sub-function that is a specific request action. 1st bit of Sub function byte has special meanning;
+*   0‘ = FALSE: the ECU shall send a response, that is, no suppression of a positive response shall be done
+*   1‘ = TRUE: Suppression of the positive response, that is, the ECU must not send a positive response
+Negative responses shall be send by the ECU independent of this bi
 ### Request Data Parameters: 
 can be DID, DTC. 
-*DID usually is static data store in advance in ECU memory, it is read by SID=0x22(readDataByIdentifier) e.g: VECU Purchase Part Number. The definition list of DID can be found in Annex C-ISO14229-1. OEM can define their own DID support list base on standard.
-*DTC is stand for Diagnoistic Trouble Code, it store information about error happen in ECU, e.g:
-
+*   DID is stand for <b>Data Identifier</b>, it usually is static data store in advance in ECU memory, it is read by SID=0x22(readDataByIdentifier) e.g: ECU Purchase Part Number. The definition list of DID can be found in Annex C-ISO14229-1. OEM can define their own DID support list base on standard.
+*   DTC is stand for <b>Diagnoistic Trouble Code</b>, DTC stores  event that satisfy error condition happenning in ECU. DTC denifition is not standardized, so it is defined specifily by OEM.
+*   Snapshot data: it is a diagnostic data collected at a specific point of time. Smapshot data is useful for diagnosting fault of vehicle since it can provide condition at the time fault occur. E.g: TimeStamp, Odometer, cabin tempurature,..
 
 ## UDS Response Frame format
 ### Negative/Positive Response Service ID
-*In case sever/ECU is repsone normally, Response SID = (Request SID + 0x40)
-*In case error happen, e.g SID is not support, Response SID = 0x7F
+*   In case sever/ECU is repsone normally, <b>Response SID = (Request SID + 0x40)</b>
+*       In case error happen, e.g SID is not support, <b>Response SID = 0x7F</b>
