--- a/_posts/2024-05-20-TEST.md
+++ b/_posts/2024-05-20-TEST.md
@@ -18,11 +18,11 @@ Some SID suport sub-function that is a specific request action. 1st bit of Sub f
 *   0‘ = FALSE: the ECU shall send a response, that is, no suppression of a positive response shall be done
 *   1‘ = TRUE: Suppression of the positive response, that is, the ECU must not send a positive response
 Negative responses shall be send by the ECU independent of this bi
-### Request Data Parameters: 
+### Request Data Parameters:
 Can be DID, DTC. 
 *   DID is stand for **Data Identifier**, it usually is static data store in advance in ECU memory, it is read by SID=0x22(readDataByIdentifier) e.g: ECU Purchase Part Number. The definition list of DID can be found in Annex C-ISO14229-1. OEM can define their own DID support list base on standard.
 *   DTC is stand for **Diagnoistic Trouble Code**, DTC stores  event that satisfy error condition happenning in ECU. DTC denifition is not standardized, so it is defined specifily by OEM.
-*   Snapshot data: it is a special DID collected at a specific point of time. Snapshot data is useful for diagnosting fault of vehicle since it can provide condition at the time fault occur. E.g: TimeStamp, Odometer, cabin tempurature, Ignition status (CL15), Voltage Supply, ... To read snapshot data, using SID = 0x19 and subfunctionbyte = 4
+*   Snapshot data: it is a special DID collected at a specific point of time. Snapshot data is useful for diagnosting fault of vehicle since it can provide condition at the time fault occur. E.g: TimeStamp, Odometer, cabin tempurature, Ignition status (CL15), Voltage Supply, .... In Autosar, it also called  **freeze frames**. To read snapshot data, using SID = 0x19 and subfunctionbyte = 4
 *   Extend data: is a set of data which provides extended status information associated with a DTC. To read snapshot data, using SID = 0x19 and subfunctionbyte = 6. We will continue discuss the extend data in next post.
 
 ## UDS Response Frame format
