--- a/_posts/2024-05-20-TEST.md
+++ b/_posts/2024-05-20-TEST.md
@@ -8,7 +8,7 @@ Therefore, the standardized protocol is created as UDS and defined in ISO 14229-
 
 ## UDS with OSI layer
 - According to 
-![UDS with OSL layer](./assets/OSI_Layer.png)
+![UDS with OSL layer](https://github.com/lexma1412/lexma1412.github.io/blob/main/assets/OSI_Layer.png)
 - In this post, we focus on UDS with CAN only
 
 ## UDS Request Frame format
