--- a/_posts/2024-05-20-TEST.md
+++ b/_posts/2024-05-20-TEST.md
@@ -2,17 +2,21 @@
 layout: default
 title:  "Welcome to Jekyll!"
 ---
-# Unified Diagnositc Severice (UDS)
+# UNIFIED DIAGNOSTIC SERVICE (UDS)
 - In automotive industry, to analyze the vehicle when it on operation or when your car has problem and you get it to garage, we need to read diagnosis data retrieved inside ECU.
 Therefore, the standardized protocol is created as UDS and defined in ISO 14229-1 to communicate with ECU.
 
 ## UDS with OSI layer
-- According to 
+- According to [1], UDS is built base on 7 OSI layer, there are many related standards with low layer (transport, network, datalink, physical) that map with multi communication protocols (e.g: CAN, Flexray, LIN,..).
 ![UDS with OSL layer](https://github.com/lexma1412/lexma1412.github.io/blob/main/assets/OSI_Layer.png?raw=true)
-- In this post, we focus on UDS with CAN only
+- In this post, we focus on UDS using with CAN protocol only due to it is widely used in automotive world.
 
 ## UDS Request Frame format
-### Sevice ID (SID)
+UDS Request Frame is CAN frame, because we just focus on application layer, therefore we assume standard CAN 11 bit identifier is using in this post. For CAN protocol, you can refer to other post.
+ ![UDS Request Frame](https://github.com/lexma1412/lexma1412.github.io/assets/UDS_Request_Frame.png?raw=true)
+
+
+### Service ID (SID)
 ID of service, range from 0x00..0x3E
 ### Sub-function byte:
 Some SIDs support sub-function that is a specific request action. 1st bit of Sub function byte has special meaning;
@@ -28,9 +32,17 @@ Request Data Parameters are including DID, DTC, Snapshot data, Extend data.
 *   Extend data: is a set of data which provides extended status information associated with a DTC. To read snapshot data, using SID = 0x19 and subfunctionbyte = 6. We will continue discuss the extend data in next post.
 
 ## UDS Response Frame format
+
+![UDS Response Frame](https://github.com/lexma1412/lexma1412.github.io/assets/UDS_Response_Frame.png?raw=true)
+
 ### Negative/Positive Response Service ID
 *   In case sever/ECU is response normally, **Response SID = (Request SID + 0x40)**
 *   In case error happen, e.g SID is not support, **Response SID = 0x7F**
 
 ### Response code
 *   The response code only need in case negative response, the list of response code is defined in ISO14229-1. E.g: Responsecode = 0x12 mean subFunction Not Supported.
+
+
+### REFERENCE
+[1] https://www.csselectronics.com/pages/uds-protocol-tutorial-unified-diagnostic-services#diagnostic-protocols
+[2] ISO-14229-1
