--- a/_posts/2024-05-20-TEST.md
+++ b/_posts/2024-05-20-TEST.md
@@ -42,7 +42,12 @@ Request Data Parameters are including DID, DTC, Snapshot data, Extend data.
 *   In case error happen, e.g SID is not support, **Response SID = 0x7F**
 
 ### Response code
-*   The response code only need in case negative response, the list of response code is defined in ISO14229-1. E.g: Responsecode = 0x12 mean subFunction Not Supported.
+*   The response code only need in case negative response, the list of response code is defined in ISO14229-1. E.g: Responsecode = 0x12 mean subFunction Not Supported. Below image summarizes Common Response Code
+![UDS Response Code](https://github.com/lexma1412/lexma1412.github.io/blob/main/assets/Response_Code.png?raw=true)
+
+## UDS Simple Sequence
+Below image demonstrates simple sequence for UDS
+![UDS Simple Sequence](https://github.com/lexma1412/lexma1412.github.io/blob/main/assets/UDS_Sequence.png?raw=true)
 
 
 ### REFERENCE
