--- a/_posts/2024-06-22-CanDbc.md
+++ b/_posts/2024-06-22-CanDbc.md
@@ -9,6 +9,8 @@ This post briefly summrizes some important points when working with Can dbc file
 There are many tool can be used to read dbc and dislay dbc visually, usually we use Candb++ tool to work with dbc and also along with Canoe tool to analyze Can bus in automotive industry. Therefore, this post also mention about useful information or guideline can be used in Candb++ tool .
 
 ## Dbc syntax
+Fron [Ref 2]:
+[Dbc fomat](https://github.com/lexma1412/lexma1412.github.io/blob/main/assets/CanDbc/Dbc.png?raw=true)</br>
 
 ## Byte and Bit Order in dbc
 
