--- a/_posts/2024-06-29-COM.md
+++ b/_posts/2024-06-29-COM.md
@@ -3,8 +3,10 @@ layout: default
 title:  "COM"
 ---
 
-# I. Communication Manager (COM)
+# I. Communication (COM)
+COM is module placed between user (RTE, SwCluC) and PduR, it provides features to transmit/received signal to/from I-PDU, after processing, COM continue to send I-PDU to PduR.<br/>
 
+Signal is sent from RTE/SwCluC to COM I-PDU, one I-PDU contains multiple signal.
 
 ## 1. Transmission of I-PDU
 
@@ -34,6 +36,8 @@ Transmission Mode of I-PDU is a group (container) of many attributes (parameter)
 
 * **Retry Fail Transmission Request**:  is optional mechanism for Tx-Pdu. It evaluates PduR_ComTransmit return value. If the return value of PduR_ComTransmit() is not equal to E_OK, the AUTOSAR COM Module shall invoke PduR_ComTransmit() for the not sent I-PDU again within the next Com_MainFunctionTx. To enable, set parameter **ComRetryFailedTransmitRequests** to True.
 
+* **MetaData Handling**: TBD
+
 ### 1.2 Transmission Property of signal
 
 Transmission property of signal/signal group indicates the I-PDU trigger condition transmission. It is configured via parameter **/ComSignal/ComTransferProperty**
@@ -48,7 +52,9 @@ TRIGGERED_WITHOUT_REPETION, TRIGGERED_ON_CHANGE_WITHOUT_REPETITION enable the ab
 
 * **Transmission Deadline Monitoring**:  This mechanism define the timeout for transmission notification from lower layer to COM. The timeout timer start from the time COM send the I-PDU transmission request to the time COM is notified(by invoking Com_TxConfirmation()).
 
-* **Signal Processing on Transmission**:  This mechanism is configured via parameter **ComIPduSignalProcessing**. It can have the value IMMEDIATE or DEFERRED. IMMEDIATE means user notification callback function Com_CbkTxAck (to upper layer Rte) are called within the functions Com_TxConfirmation(). DEFERRED means user notification callback function are called on task level during the next call cycle of the respecitve Com_MainFunctionTx().
+* **Signal Processing on Transmission**:  This mechanism is configured via parameter **ComIPduSignalProcessing**. It can have the value IMMEDIATE or DEFERRED. IMMEDIATE means user notification callback function Com_CbkTxAck (to upper layer Rte) are called within the functions Com_TxConfirmation(). DEFERRED means user notification callback function are called on task level during the next call cycle of the respecitve Com_MainFunctionTx(). The purpose of this mechanism is to chose which context (interrupt or task) that callback function Com_CbkTxAck should be performed.
+
+* **Update-bit**: The update-bits indicate whether the user (e.g. RTE or SwCluC) on sender-side has updated a signal value, before the I-PDU, containing that signal, was transmitted to the PDU Router. In transmission, COM handle to update update-bit. For clear update-bit condition, refer Autosar Com.
 
 * **Signal Invalidation**: TBD
 
@@ -65,3 +71,19 @@ Transmission Filtering provides an evaluation to sent signal from upper layer (R
 |MASKED_NEW_DIFFERS_X| ((new \& mask) \!\= x)|
 |NEW_IS_OUTSIDE| ((new < min) \|\| (max < new))|
 |NEW_IS_WITHIN| ((min \<\= new) \&\& (new \<\= max))|
+
+
+## 2. Reception of I-PDU
+TBD
+
+## 3. Large I-PDU (working with transport protocol)
+Large I-PDU contain large signal(s). It mean the length of I-PDU/signal is more than the restricted size of data frame that low hardware protocol can send at one time, e.g: basic CAN can only send 8 bytes data in one frame. In this case, large I-PDU need to be sent multiple times to lower layer PdUR, PduR continue to handle and send to transport protocol module (e.g CANTP) and finally N-PDU is sent to interface and communication driver. Refer to PduR post for detail.
+
+## 4. Gateway
+TBD
+
+## 5. Signal group and shadow buffer
+TBD
+
+## 6. Dynamic length signal
+TBD 
