--- a/_posts/2024-06-29-COM.md
+++ b/_posts/2024-06-29-COM.md
@@ -17,6 +17,9 @@ beside that, sent signal from upper layer to COM also need to be considered:
 - Transmission Property (for sent **signal** from RTE to COM)
 - Transmission Filtering (for sent **signal** from RTE to COM)
 
+![COM Transmission](https://github.com/lexma1412/lexma1412.github.io/blob/main/assets/COM/COM_Transmit.png?raw=true)
+
+
 ### 1.1 Transmission Mode of I-PDU
 
 Transmission Mode of I-PDU is a group (container) of many attributes (parameter). Transmission Mode is configured for PDU via container **ComTxMode** . Transmission Mode mode (sound strange!!!) is configured via parameter **/ComTxMode/TxModeMode**
@@ -28,15 +31,13 @@ Transmission Mode of I-PDU is a group (container) of many attributes (parameter)
 |MIXED|Combination of CYCLIC and DIRECT|
 |NONE|COM does not transmit the I-PDU. The transmission must be triggered by the lower layer through Com_TriggerTransmit()|
 
-* **Selection of the Transmission Mod (TMC)**: This is a configuration method, it provide a way to select transmission mode for each I-PDU. According to AUTSOAR COM, there are 2 transmission mode options for each PDU: Mode True(ComTxModeTrue) and Mode False(ComTxModeFalse). Each option will it own Transmission Mode (ComTxMode container is child of ComTxModeTrue/ComTxModeFalse).The evaluation TMC is True or False based on filtering of signals belong to coresponding PDU
+* **Selection of the Transmission Mod (TMC)**: This is a configuration method, it provide a way to select transmission mode for each I-PDU. According to AUTSOAR COM, there are 2 transmission mode options for each PDU: Mode True(ComTxModeTrue) and Mode False(ComTxModeFalse). Each option will it own Transmission Mode (ComTxMode container is child of ComTxModeTrue/ComTxModeFalse).The evaluation TMC is True or False based on filtering of signals belong to corresponding PDU.
 
 * **Minimum Delay Time (MDT)**: is optional mechanism for Tx-Pdu has Transmission Property except NONE. It define as the minimum time between 2 I-PDU transmission to lower layer (PduR). If more than one transmission request before MDT expires, sent the last value updated will be sent. This mechanism can be disable when **/ComGeneral/ComEnableMDTForCyclicTransmission = false** for cyclic(=PERIODIC) PDU and cyclic(=MIXED) part of I-PDU.
 
 * **Repetition**: is optional mechanism for Tx-Pdu. It define number of times I-PDU is sent repeatedly via PudR_ComTransmit(). The number of times is set via **ComTxModeNumberOfRepetitions** with with period between 2 repetition times is set via **ComTxModeRepetitionPeriod**, This mechanism is for direct(=DIRECT) PDU and non-cyclic(=MIXED) part of I-PDU.
 
 * **Retry Fail Transmission Request**:  is optional mechanism for Tx-Pdu. It evaluates PduR_ComTransmit return value. If the return value of PduR_ComTransmit() is not equal to E_OK, the AUTOSAR COM Module shall invoke PduR_ComTransmit() for the not sent I-PDU again within the next Com_MainFunctionTx. To enable, set parameter **ComRetryFailedTransmitRequests** to True.
-
-* **MetaData Handling**: TBD
 
 ### 1.2 Transmission Property of signal
 
@@ -52,9 +53,7 @@ TRIGGERED_WITHOUT_REPETION, TRIGGERED_ON_CHANGE_WITHOUT_REPETITION enable the ab
 
 * **Transmission Deadline Monitoring**:  This mechanism define the timeout for transmission notification from lower layer to COM. The timeout timer start from the time COM send the I-PDU transmission request to the time COM is notified(by invoking Com_TxConfirmation()).
 
-* **Signal Processing on Transmission**:  This mechanism is configured via parameter **ComIPduSignalProcessing**. It can have the value IMMEDIATE or DEFERRED. IMMEDIATE means user notification callback function Com_CbkTxAck (to upper layer Rte) are called within the functions Com_TxConfirmation(). DEFERRED means user notification callback function are called on task level during the next call cycle of the respecitve Com_MainFunctionTx(). The purpose of this mechanism is to chose which context (interrupt or task) that callback function Com_CbkTxAck should be performed.
-
-* **Update-bit**: The update-bits indicate whether the user (e.g. RTE or SwCluC) on sender-side has updated a signal value, before the I-PDU, containing that signal, was transmitted to the PDU Router. In transmission, COM handle to update update-bit. For clear update-bit condition, refer Autosar Com.
+* **Signal Processing on Transmission**:  This mechanism is configured via parameter **ComIPduSignalProcessing**. It can have the value IMMEDIATE or DEFERRED. IMMEDIATE means user notification callback function Com_CbkTxAck (to upper layer Rte) are called within the functions Com_TxConfirmation(). DEFERRED means user notification callback function are called on task level during the next call cycle of the respecitve Com_MainFunctionTx().
 
 * **Signal Invalidation**: TBD
 
@@ -71,19 +70,3 @@ Transmission Filtering provides an evaluation to sent signal from upper layer (R
 |MASKED_NEW_DIFFERS_X| ((new \& mask) \!\= x)|
 |NEW_IS_OUTSIDE| ((new < min) \|\| (max < new))|
 |NEW_IS_WITHIN| ((min \<\= new) \&\& (new \<\= max))|
-
-
-## 2. Reception of I-PDU
-TBD
-
-## 3. Large I-PDU (working with transport protocol)
-Large I-PDU contain large signal(s). It mean the length of I-PDU/signal is more than the restricted size of data frame that low hardware protocol can send at one time, e.g: basic CAN can only send 8 bytes data in one frame. In this case, large I-PDU need to be sent multiple times to lower layer PdUR, PduR continue to handle and send to transport protocol module (e.g CANTP) and finally N-PDU is sent to interface and communication driver. Refer to PduR post for detail.
-
-## 4. Gateway
-TBD
-
-## 5. Signal group and shadow buffer
-TBD
-
-## 6. Dynamic length signal
-TBD 
