--- a/_posts/20225-12-15-Subsystem.md
+++ b/_posts/20225-12-15-Subsystem.md
@@ -24,7 +24,7 @@ In other words, an atomic subsystem executes all internal blocks as one unit, an
 
 Let's see an example below:
 
-![Example of Time based debouncing](https://github.com/lexma1412/lexma1412.github.io/blob/main/assets/20225-12-15-Subsystem.png?raw=true)
+![Example of Atomic vs virtual subsystem](https://github.com/lexma1412/lexma1412.github.io/blob/main/assets/Subsystem_matlab.png?raw=true)
 
 ### Model Overview
 
@@ -49,6 +49,13 @@ In other words, there is a signal that needs to be saved and used with its previ
 + **Subsystem_A** uses data from output e of Atomic Subsystem_B as its input.
 
 This impacts the execution order. As you can see, MATLAB determines that Atomic Subsystem_B needs to run at order (1) because it provides input for order (2) in Subsystem_A. However, at the beginning, there is no data from output f yet, which doesn't make sense. Thus, output f of Subsystem_A and the input of Atomic Subsystem_B are actually interdependent in the same software cycle.
+
+To resolve, we need to add a unit delay block in the path output f of Subsystem_A to input of Atomic Subsystem_B, in C code we can understand as following code:
+e = prev_f + d
+f = e + a
+pre_f = f
+
+![Example resolving  Algebraic Loops when using Atomic subsystem](https://github.com/lexma1412/lexma1412.github.io/blob/main/assets/Subsystem_matlab_2.png?raw=true)
 
 
 
