--- a/_posts/20225-12-15-Subsystem.md
+++ b/_posts/20225-12-15-Subsystem.md
@@ -41,7 +41,7 @@ First, let's see the execution order that MATLAB shows us. Subsystem_A has 2 act
 
 Second, as you can see, there is a warning from MATLAB: "Block diagram 'Subsystem' contains 1 algebraic loop(s)". What is an "algebraic loop"?
 
-> An algebraic loop means there is a signal that depends on itself in the same simulation step.
+An algebraic loop means there is a signal that depends on itself in the same simulation step.
 
 In other words, there is a signal that needs to be saved and used with its previous or past data. The reason is that there is data exchange between Atomic Subsystem_B and Subsystem_A:
 
